--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -1,4 +1,4 @@
-.header{
+/* .header{
     border-bottom: 1px solid #e7e9fc;
     background: #FFF;
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
@@ -111,4 +111,4 @@
     gap: 40px;
     padding-top: 24px;
     padding-bottom: 24px;
-    }
+    } */
