--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,3 +1,27 @@
+.container{
+
+padding-left: 20px;
+padding-right: 20px;
+
+}
+
+@media screen and (min-width: 320px) {
+.container {
+width: 320px;
+margin-left: auto;
+margin-right: auto;
+}
+}
+
+@media screen and (min-width: 768px) {
+.container {
+width: 736px;
+padding-left: 16px;
+padding-right: 16px;
+} 
+}
+
+
 /* .container{
 width: 1158px;
 margin: 0 auto;
