--- a/css/base/container.css
+++ b/css/base/container.css
@@ -21,10 +21,10 @@ padding-right: 16px;
 } 
 }
 
+@media screen and (min-width: 1158px) {
+.container {
+width: 1158px;       
+}
+}
 
-/* .container{
-width: 1158px;
-margin: 0 auto;
-padding-left: 15px;
-padding-right: 15px;
-} */
+
