--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -1,3 +1,63 @@
+.nav-list {
+display: none;
+}
+
+.nav-logo{
+color: #4d5ae5;
+font-family: Raleway, sans-serif;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+height: 24px;
+align-items: center;
+margin-right: 76px;
+}
+    
+.navigation-link{
+color: #2E2F42;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+padding-top: 24px;
+padding-bottom: 24px;
+}
+
+.studio{
+color: #2E2F42;
+font-family: Raleway;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio-link{
+position: relative;
+color: #404bbf;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio-link::after{
+content: '';
+display: block;
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+width: 48px;
+background-color: #404bbf;
+border-radius: 2px;
+}
+
+
 /* .header{
     border-bottom: 1px solid #e7e9fc;
     background: #FFF;
