--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -1,3 +1,8 @@
+.header {
+padding-top: 18px;
+padding-bottom: 18px;
+}
+
 .nav-list {
 display: none;
 }
@@ -55,6 +60,10 @@ height: 4px;
 width: 48px;
 background-color: #404bbf;
 border-radius: 2px;
+}
+
+.open-burger {
+
 }
 
 
