--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -62,10 +62,68 @@ background-color: #404bbf;
 border-radius: 2px;
 }
 
-.open-burger {
-
+.burger {
+border: none;
+background-color: transparent;
+padding: 0;
+line-height: 0;
 }
 
+.header-container{
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
+.mobile-menu {
+position: fixed;
+top: 0;
+left: 0;
+z-index: 99999;
+width: 100%;
+height: 100%;
+background-color: #F4F4FD;
+transform: translateX(100%);
+transition: transform 250ms ease-in;
+}
+
+.mobile-menu.is-open{
+transform: translateX(0%);
+}
+
+.mob-menu-close-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #E7E9FC;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    line-height: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .mob-menu-close-btn:hover,
+    .mob-menu-close-btn:focus{
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+    }
+
+    @media screen and (min-width: 768px) {
+    .burger {
+    display: none;
+    }
+
+    .nav-list{
+    display: flex;
+    }
+    }
 
 /* .header{
     border-bottom: 1px solid #e7e9fc;
