--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -7,7 +7,7 @@
     background: #2E2F42;
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Hero/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/Hero/people-office.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
