--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -1,8 +1,15 @@
+.section-effective {
+
+}
 
 
 
 
 
+
+
+
+/* 
 .section-effective{
     background: #2E2F42;
     padding-top: 188px;
@@ -56,4 +63,4 @@
     .button-effective:focus{
     background-color: #404BBF;
     }
-    
+     */
