--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -8,6 +8,53 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 background-position: center;
 }
 
+.table-effective {
+    width: 288px;
+    height: 160px;
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    padding-bottom: 72px;
+    }
+    
+    .button-effective {
+    background: #4D5AE5;
+    color: #FFF;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    }
+    
+    .advan-section {
+    
+    }
+    
+    .advan-list {
+    display: flex;
+    flex-direction: column;
+    }
+
 @media screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx),
 screen and (min-device-pixel-ratio: 2) {
@@ -19,7 +66,18 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 @media screen and (min-width: 768px) {
 .section-effective {
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../../images/Rastr_img/2.Tablet/hero-image-tab.jpg");
+padding-top: 0;
 }
+
+.table-effective{
+width: 496px;
+height: 120px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 36px;
+padding-top: 112px;
+}
+
 }
 
 @media screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -44,52 +102,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 }
 }
 
-.table-effective {
-width: 288px;
-height: 160px;
-color: #FFF;
-text-align: center;
-font-family: Roboto;
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-padding-bottom: 72px;
-}
 
-.button-effective {
-    background: #4D5AE5;
-    color: #FFF;
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 4px;
-    border: none;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-left: auto;
-    margin-right: auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.advan-section {
-
-}
-
-.advan-list {
-display: flex;
-flex-direction: column;
-}
 
 
 
