--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -89,9 +89,59 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 }
 
 @media screen and (min-width: 1158px) {
-.section-effective {
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../../images/Rastr_img/2.Tablet/hero-image-tab.jpg");
-}
+    .section-effective{
+        background: #2E2F42;
+        padding-top: 188px;
+        padding-bottom: 188px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../../images/Rastr_img/2.Tablet/hero-image@2x-tab.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1440px;
+        
+        }
+        
+        .table-effective{
+        color: #FFF;
+        text-align: center;
+        font-size: 56px;
+        font-style: normal;
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 48px;
+        margin-left: auto;
+        margin-right: auto;
+        }
+        
+        .button-effective{
+        background: #4D5AE5;
+        color: #FFF;
+        font-family: Roboto, sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        padding: 16px 32px;
+        align-items: flex-start;
+        gap: 10px;
+        border-radius: 4px;
+        border: none;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        margin-left: auto;
+        margin-right: auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+        }
+        
+        .button-effective:hover,
+        .button-effective:focus{
+        background-color: #404BBF;
+        }
 }
     
 @media screen and (min-resolution: 192dpi) and (min-width: 1158px),
@@ -111,58 +161,6 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 
 
 
-/* 
-.section-effective{
-    background: #2E2F42;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/Hero/people-office.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    max-width: 1440px;
+
+
     
-    }
-    
-    .table-effective{
-    color: #FFF;
-    text-align: center;
-    font-size: 56px;
-    font-style: normal;
-    font-weight: 700;
-    letter-spacing: 0.02em;
-    line-height: 1.07;
-    max-width: 496px;
-    margin-bottom: 48px;
-    margin-left: auto;
-    margin-right: auto;
-    }
-    
-    .button-effective{
-    background: #4D5AE5;
-    color: #FFF;
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 4px;
-    border: none;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-left: auto;
-    margin-right: auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    }
-    
-    .button-effective:hover,
-    .button-effective:focus{
-    background-color: #404BBF;
-    }
-     */
