--- a/css/layout/Section-advan.css
+++ b/css/layout/Section-advan.css
@@ -1,4 +1,42 @@
-.advan-container{
+.icon-container {
+display: none;
+}
+
+.advan-section {
+padding-top: 96px;
+padding-bottom: 96px;
+background-color: #FFF;
+}
+
+.advan-list {
+display: flex;
+flex-direction: column;
+gap: 72px;
+}
+
+.advantages {
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    gap: 8px;
+}
+
+.advan-text {
+    color: #434455;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+
+/* .advan-container{
     display: flex;
     }
     
@@ -47,4 +85,4 @@
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    }
+    } */
