--- a/css/layout/Section-advan.css
+++ b/css/layout/Section-advan.css
@@ -15,24 +15,37 @@ gap: 72px;
 }
 
 .advantages {
-    color: var(--NAVY-BLUE, #2E2F42);
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    gap: 8px;
+color: var(--NAVY-BLUE, #2E2F42);
+text-align: center;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+gap: 8px;
 }
 
 .advan-text {
-    color: #434455;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+color: #434455;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+
+.advan-list {
+display: flex;
+flex-wrap: wrap;
+width: calc((100% - 72px) / 2);
+}
+}
+
+@media screen and (min-width: 1158px) {
+
 }
 
 
