--- a/css/layout/Section-advan.css
+++ b/css/layout/Section-advan.css
@@ -52,56 +52,55 @@ width: calc((100% - 24px) / 2);
 
 @media screen and (min-width: 1158px) {
 
+    .advan-container{
+        display: flex;
+        }
+        
+        .icon-container{
+        width: 264px;
+        height: 112px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        margin-bottom: 8px;
+        }
+        
+        .advan-section{
+        padding-top: 120px;
+        padding-bottom: 120px;
+        }
+        
+        .advan-list{
+        display: flex;
+        width: 1158px;
+        align-items: stretch;
+        gap: 24px;
+        }
+        
+        .advan-item{
+        width: calc((100% - 72px) / 4);
+        }
+        
+        .advantages{
+        color: #2E2F42;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        letter-spacing: 0.02em;
+        line-height: 1.2; 
+        margin-bottom: 8px
+        }
+        
+        .advan-text{
+        color: #434455;
+        background-color: #FFFFFF;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        }
 }
 
-
-/* .advan-container{
-    display: flex;
-    }
-    
-    .icon-container{
-    width: 264px;
-    height: 112px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    margin-bottom: 8px;
-    }
-    
-    .advan-section{
-    padding-top: 120px;
-    padding-bottom: 120px;
-    }
-    
-    .advan-list{
-    display: flex;
-    width: 1158px;
-    align-items: stretch;
-    gap: 24px;
-    }
-    
-    .advan-item{
-    width: calc((100% - 72px) / 4);
-    }
-    
-    .advantages{
-    color: #2E2F42;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    line-height: 1.2; 
-    margin-bottom: 8px
-    }
-    
-    .advan-text{
-    color: #434455;
-    background-color: #FFFFFF;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    } */
