--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -1,4 +1,9 @@
-.section-team{
+
+
+
+
+
+/* .section-team{
     background: #F4F4FD;
     padding-top: 120px;
     padding-bottom: 120px;
@@ -91,4 +96,4 @@
     .social-list-link:hover,
     .social-list-link:focus{
     background-color: #404bbf;
-    }
+    } */
