--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -1,3 +1,79 @@
+.section-team {
+padding-top: 96px;
+padding-bottom: 96px;
+background: #F4F4FD;
+}
+
+.table-team {
+    color: #2E2F42;
+    margin-bottom: 96px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.worker-photo {
+margin-bottom: 32px;
+}
+
+.name-team {
+    color: #2E2F42;
+    margin-bottom: 8px;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.job-name {
+    color: #434455;
+    margin-bottom: 8px;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.social-list {
+display: flex;
+justify-content: center;
+gap: 24px;
+}
+
+.social-list-icon{
+    fill: #f4f4fd;
+    }
+    
+    .social-list-item{
+    width: 40px;
+    height: 40px;
+    margin-bottom: 104px;
+    }
+    
+    .social-list-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .social-list-link:hover,
+    .social-list-link:focus{
+    background-color: #404bbf;
+    }
 
 
 
