--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -75,7 +75,14 @@ gap: 24px;
     background-color: #404bbf;
     }
 
+@media screen and (min-width: 768px) {
 
+}
+
+
+@media screen and (min-width: 1158px) {
+
+}
 
 
 
