--- a/css/layout/Section-portfolio.css
+++ b/css/layout/Section-portfolio.css
@@ -1,4 +1,12 @@
-.container-portfolio{
+.table-portfolio {
+
+}
+
+
+
+
+
+/* .container-portfolio{
     position: relative;
     overflow: hidden;
     }
@@ -76,4 +84,4 @@
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    }
+    } */
