--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -76,107 +76,88 @@ gap: 24px;
     }
 
 @media screen and (min-width: 768px) {
+.team-container {
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+justify-content: center;
+gap: 64px 24px;
+}
+
+.team-list {
+width: calc((100% - 24) / 2);
+}
 
 }
 
 
 @media screen and (min-width: 1158px) {
+    .section-team{
+        background: #F4F4FD;
+        padding-top: 120px;
+        padding-bottom: 120px;
+        }
+        
+        .team-img-padding{
+        padding-top: 32px;
+        padding-bottom: 32px;
+        width: 232px;
+        height: 168px;
+        }
+        
+        .team-container{
+        display: flex;
+        gap: 24px;  
+        }
+        
+        .table-team{
+        color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        line-height: 1.11;
+        margin-bottom: 72px;
+        }
+        
+        .team-list{
+        background-color: #FFFFFF;
+        border-radius: 0px 0px 4px 4px;
+        width: calc((100% - 72px) / 4);
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        }
+        
+        .worker-photo{
+        background: url(<path-to-image>), lightgray -200px -7.128px / 251.515% 170.277% no-repeat;
+        }
+        
+        .name-team{
+        color: #2E2F42;
+        text-align: center;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        margin-bottom: 8px
+        }
+        
+        .job-name{
+        color: #434455;
+        text-align: center;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        margin-bottom: 8px;
+        }
+        
+        .social-list-item{
+        width: 40px;
+        height: 40px;
+        }
 
 }
-
-
-
-/* .section-team{
-    background: #F4F4FD;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    }
-    
-    .team-img-padding{
-    padding-top: 32px;
-    padding-bottom: 32px;
-    width: 232px;
-    height: 168px;
-    }
-    
-    .team-container{
-    display: flex;
-    gap: 24px;  
-    }
-    
-    .table-team{
-    color: #2E2F42;
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    line-height: 1.11;
-    margin-bottom: 72px;
-    }
-    
-    .team-list{
-    background-color: #FFFFFF;
-    border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px) / 4);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
-    
-    .worker-photo{
-    background: url(<path-to-image>), lightgray -200px -7.128px / 251.515% 170.277% no-repeat;
-    }
-    
-    .name-team{
-    color: #2E2F42;
-    text-align: center;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px
-    }
-    
-    .job-name{
-    color: #434455;
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px;
-    }
-    
-    .social-list{
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    }
-    
-    .social-list-icon{
-    fill: #f4f4fd;
-    }
-    
-    .social-list-item{
-    width: 40px;
-    height: 40px;
-    }
-    
-    .social-list-link{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .social-list-link:hover,
-    .social-list-link:focus{
-    background-color: #404bbf;
-    } */
