--- a/css/layout/Section-portfolio.css
+++ b/css/layout/Section-portfolio.css
@@ -1,7 +1,47 @@
 .table-portfolio {
-
+    color: #2E2F42;
+    padding-top: 96px;
+    padding-bottom: 72px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
+.container-portfolio {
+margin-bottom: 32px;
+}
+
+.portfolio-img-padding {
+margin-bottom: 32px;
+}
+
+.portfolio-app {
+margin-bottom: 8px;
+}
+
+.overlay{
+    position: absolute;
+    overflow: auto;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px; 
+    background-color: #4d5ae5; 
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+.portfolio-item:hover .overlay {
+transform: translateY(0%);
+}
 
 
 
