--- a/css/layout/Section-portfolio.css
+++ b/css/layout/Section-portfolio.css
@@ -1,17 +1,19 @@
 .table-portfolio {
-    color: #2E2F42;
-    padding-top: 96px;
-    padding-bottom: 72px;
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
+color: #2E2F42;
+padding-top: 96px;
+padding-bottom: 72px;
+text-align: center;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
 }
 
 .container-portfolio {
+position: relative;
+overflow: hidden;
 margin-bottom: 32px;
 }
 
@@ -43,85 +45,100 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 transform: translateY(0%);
 }
 
+@media screen and (min-width: 768px) {
+.portfolio-list {
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+justify-content: center;
+}
+
+.portfolio-item {
+width: calc((100% - 24) / 2);
+}
+
+}
+
+@media screen and (min-width: 1158px) {
+    .container-portfolio{
+        position: relative;
+        overflow: hidden;
+        }
+        
+        .overlay{
+        position: absolute;
+        overflow: auto;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px; 
+        background-color: #4d5ae5; 
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        
+        .portfolio-list{
+        display: flex;
+        column-gap: 24px;
+        row-gap: 48px;
+        flex-wrap: wrap;
+        }
+        
+        .portfolio-section{
+        padding-top: 120px;
+        padding-bottom: 120px;
+        }
+        
+        .portfolio-img-padding{
+        padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
+        }
+        
+        .portfolio-item{
+        width: calc((100% - 48px) / 3);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        }
+        
+        .portfolio-item:hover .overlay {
+        transform: translateY(0%);
+        }
+        
+        .table-portfolio{
+        color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        margin-bottom: 72px;
+        }
+        
+        .portfolio-app{
+        color: #2E2F42;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        margin-bottom: 8px
+        }
+        
+        .portfolio-change{
+        color: #434455;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        }
+}
 
 
-
-/* .container-portfolio{
-    position: relative;
-    overflow: hidden;
-    }
-    
-    .overlay{
-    position: absolute;
-    overflow: auto;
-    top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    padding: 40px 32px; 
-    background-color: #4d5ae5; 
-    height: 100%;
-    width: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .portfolio-list{
-    display: flex;
-    column-gap: 24px;
-    row-gap: 48px;
-    flex-wrap: wrap;
-    }
-    
-    .portfolio-section{
-    padding-top: 120px;
-    padding-bottom: 120px;
-    }
-    
-    .portfolio-img-padding{
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-    }
-    
-    .portfolio-item{
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
-    
-    .portfolio-item:hover .overlay {
-    transform: translateY(0%);
-    }
-    
-    .table-portfolio{
-    color: #2E2F42;
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
-    }
-    
-    .portfolio-app{
-    color: #2E2F42;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px
-    }
-    
-    .portfolio-change{
-    color: #434455;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    } */
