--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -1,4 +1,9 @@
-.footer{
+
+
+
+
+
+/* .footer{
     background-color: #2E2F42;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -156,4 +161,4 @@
     
     .subscribe-svg{
     margin-left: 16px;
-    }
+    } */
