--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -55,7 +55,6 @@ gap: 24px;
     .social-list-item{
     width: 40px;
     height: 40px;
-    margin-bottom: 104px;
     }
     
     .social-list-link{
@@ -74,6 +73,11 @@ gap: 24px;
     .social-list-link:focus{
     background-color: #404bbf;
     }
+
+.team-img-padding {
+background-color: #FFF;
+padding-bottom: 32px;
+}
 
 @media screen and (min-width: 768px) {
 .team-container {
