--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -14,8 +14,7 @@ background: #2E2F42;
     text-transform: uppercase;
     display: inline-block;
     margin-bottom: 18px;
-    margin-left: auto;
-    margin-right: auto;
+    
     }
     
     .footer-web{
@@ -52,6 +51,7 @@ background: #2E2F42;
 
     .footer-sm-list {
         color: #FFF;
+        text-align: center;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -63,7 +63,30 @@ background: #2E2F42;
     .footer-list {
     display: flex;
     margin-bottom: 72px;
+    justify-content: center;
+    gap: 16px;
     }
+
+    .footer-list-link{
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        
+        .footer-list-icon{
+        width: 40px;
+        height: 40px;
+        }
+        
+        .footer-list-link:hover,
+        .footer-list-link:focus {
+        background-color: #31d0aa; 
+        }
 
     .subscribe {
         color: #FFF;
@@ -73,14 +96,44 @@ background: #2E2F42;
         line-height: 1.5;
         letter-spacing: 0.02em;
         margin-bottom: 16px;
+        text-align: center;
     }
 
-    .footer-form-label {
-
+    .input-footer{
+    width: 288px;
+    height: 40px;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+    color: #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    border-radius: 4px;
+    border: 1px solid #ffffff; 
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     }
 
-    btn-subscribe {
+    .btn-subscribe {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 96px;
+    }
 
+    .footer-form {
+    display: flex;
+    flex-direction: column;
     }
 
 
