--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -40,24 +40,24 @@ background: #2E2F42;
     }
 
     .text-footer {
-        color: #F4F4FD;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        margin-bottom: 72px;
+    color: #F4F4FD;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 72px;
     }
 
     .footer-sm-list {
-        color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        margin-bottom: 16px;
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
     }
 
     .footer-list {
@@ -68,35 +68,35 @@ background: #2E2F42;
     }
 
     .footer-list-link{
-        width: 100%;
-        height: 100%;
-        background-color: #4d5ae5;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
         
-        .footer-list-icon{
-        width: 40px;
-        height: 40px;
-        }
+    .footer-list-icon{
+    width: 40px;
+    height: 40px;
+    }
         
-        .footer-list-link:hover,
-        .footer-list-link:focus {
-        background-color: #31d0aa; 
-        }
+    .footer-list-link:hover,
+    .footer-list-link:focus {
+    background-color: #31d0aa; 
+    }
 
     .subscribe {
-        color: #FFF;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        margin-bottom: 16px;
-        text-align: center;
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    text-align: center;
     }
 
     .input-footer{
@@ -113,6 +113,7 @@ background: #2E2F42;
     border-radius: 4px;
     border: 1px solid #ffffff; 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    opacity: 0.3;
     }
 
     .btn-subscribe {
@@ -129,6 +130,10 @@ background: #2E2F42;
     border: none;
     border-radius: 4px;
     margin-bottom: 96px;
+    }
+
+    .subscribe-svg{
+    margin-left: 16px;
     }
 
     .footer-form {
