--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -142,6 +142,15 @@ background: #2E2F42;
     }
 
 
+    @media screen and (min-width: 768px) {
+        
+    }
+
+    @media screen and (min-width: 1158px) {
+        
+    }
+
+
 /* .footer{
     background-color: #2E2F42;
     padding-top: 100px;
