--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -155,6 +155,10 @@ min-width: 320px;
     gap: 72px 24px;
     }
 
+    .text-footer {
+    max-width: 264px;
+    }
+
     .subscribe {
     text-align: left;
     }
@@ -182,6 +186,11 @@ min-width: 320px;
     }
 
     @media screen and (min-width: 1158px) {
+        .container {
+        display: flex;
+        flex-wrap: nowrap;
+        }
+
         .footer{
             background-color: #2E2F42;
             padding-top: 100px;
