--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -6,8 +6,13 @@ background: #2E2F42;
 min-width: 320px;
 }
 
+.logo-footer-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
 .foot-logo{
-    padding-top: 98px;
     color: #4d5ae5;
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -133,7 +138,6 @@ min-width: 320px;
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
-    margin-bottom: 96px;
     }
 
     .subscribe-svg{
@@ -143,10 +147,16 @@ min-width: 320px;
     .footer-form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     }
 
 
     @media screen and (min-width: 768px) {
+
+    .footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+    }
 
     .container {
     display: flex;
