--- a/css/layout/Modal.css
+++ b/css/layout/Modal.css
@@ -9,7 +9,7 @@
     transform: translate(-50%, -50%);
     width: 288px;
     min-height: 584px;
-    padding: 72px 24px 24px 24px;
+    padding: 8px 16px;
     border-radius: 4px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -55,6 +55,11 @@
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 72px;
+    }
+
+    .rewiew-form {
+    padding-bottom: 24px;
     }
     
     .rewiew-form-wrapper {
