--- a/css/layout/Modal.css
+++ b/css/layout/Modal.css
@@ -57,10 +57,6 @@
     letter-spacing: 0.02em;
     padding-top: 72px;
     }
-
-    .rewiew-form {
-    padding-bottom: 24px;
-    }
     
     .rewiew-form-wrapper {
     width: 256px;
@@ -204,8 +200,9 @@
     display: block;
     min-width: 169px;
     height: 56px;
-    padding: 16px 32px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
     border-radius: 4px;
     border: none;
     color: #ffffff;
