--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -86,7 +86,7 @@ left: 0;
 z-index: 99999;
 width: 100%;
 height: 100%;
-background-color: #F4F4FD;
+background-color: #FFF;
 transform: translateX(100%);
 transition: transform 250ms ease-in;
 }
@@ -123,6 +123,10 @@ fill: #ffffff;
 
 @media screen and (min-width: 768px) {
 
+.header-container {
+flex-wrap: nowrap;
+}
+
 .burger {
 display: none;
 }
@@ -130,6 +134,7 @@ display: none;
 .adress-list {
 display: flex;
 flex-direction: column;
+
 }
 
 .navigation  {
