--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -4,7 +4,7 @@ padding-top: 96px;
 padding-bottom: 96px;
 }
 
-.container-foot {
+.allfoot-container {
 min-width: 320px;
 padding-left: 20px;
 padding-right: 20px;
@@ -162,7 +162,7 @@ align-items: center;
     padding-bottom: 96px;
     }
 
-    .container-foot {
+    .allfoot-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -200,10 +200,6 @@ align-items: center;
     }
 
     @media screen and (min-width: 1158px) {
-        .container-foot {
-        display: flex;
-        flex-wrap: nowrap;
-        }
 
         .footer{
             background-color: #2E2F42;
@@ -214,6 +210,7 @@ align-items: center;
             
             .allfoot-container{
             display: flex;
+            flex-wrap: nowrap;
             align-items: baseline;
             margin: 0 auto;
             }
@@ -364,6 +361,6 @@ align-items: center;
             .subscribe-svg{
             margin-left: 16px;
             }
-    }
+}
 
 
