--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -85,7 +85,7 @@ gap: 72px 24px;
 position: fixed;
 top: 0;
 left: 0;
-z-index: 99999;
+z-index: 9999999999;
 width: 100%;
 height: 100%;
 background-color: #FFF;
