--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -121,6 +121,44 @@ border: none;
 fill: #ffffff;
 }
 
+.nav-menu-list {
+}
+
+.navigation-menu-link {
+}
+
+.studio-link {
+}
+
+.adress-menu-list {
+}
+
+.adress-menu-link {
+}
+
+.menu-soclist {
+display: flex;
+margin-bottom: 72px;
+justify-content: center;
+gap: 40px;
+}
+
+.menu-soclist-icon {
+width: 40px;
+height: 40px;
+}
+
+.menu-soclist-link {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 
 @media screen and (min-width: 768px) {
