--- a/css/layout/Header.css
+++ b/css/layout/Header.css
@@ -233,6 +233,7 @@ display: flex;
 
 @media  screen and (min-width: 1158px) {
 .header{
+padding: 0;
 border-bottom: 1px solid #e7e9fc;
 background: #FFF;
 box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
@@ -342,8 +343,6 @@ color: #404bbf
 .nav-list{
 display: flex;
 gap: 40px;
-padding-top: 24px;
-padding-bottom: 24px;
 }
 
 
