--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -210,6 +210,7 @@ display: flex;
 flex-wrap: nowrap;
 align-items: baseline;
 margin: 0 auto;
+gap: 0;
 }
 
 .logo-footer-container{
@@ -295,6 +296,7 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
+text-align: left;
 margin-bottom: 16px;
 }
 
@@ -311,6 +313,7 @@ display: flex;
 gap: 24px;
 }
 
+
 .subscribe{
 color: #FFF;
 font-family: Roboto;
@@ -325,6 +328,7 @@ margin-bottom: 16px;
 width: 264px;
 height: 40px;
 padding: 8px 16px;
+margin: 0;
 color: #ffffff;
 background-color: transparent;
 font-size: 12px;
