--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -100,6 +100,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         margin-bottom: 48px;
         margin-left: auto;
         margin-right: auto;
+        padding: 0;
         }
         
         .button-effective{
