--- a/css/layout/Section-portfolio.css
+++ b/css/layout/Section-portfolio.css
@@ -64,6 +64,7 @@ width: calc((100% - 24px) / 2);
     .container-portfolio{
         position: relative;
         overflow: hidden;
+        margin-bottom: 0;
         }
         
         .overlay{
@@ -98,6 +99,7 @@ width: calc((100% - 24px) / 2);
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
         border-top: none;
+        margin-bottom: 0;
         }
         
         .portfolio-item{
@@ -120,6 +122,7 @@ width: calc((100% - 24px) / 2);
         letter-spacing: 0.02em;
         text-transform: capitalize;
         margin-bottom: 72px;
+        padding: 0;
         }
         
         .portfolio-app{
