--- a/css/layout/Section-effective.css
+++ b/css/layout/Section-effective.css
@@ -18,7 +18,7 @@ background-position: center;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
     }
     
     .button-effective {
