--- a/css/layout/Section-team.css
+++ b/css/layout/Section-team.css
@@ -1,4 +1,4 @@
-.container {
+.team-div-container {
 width: 296px;
 }
 
@@ -32,7 +32,7 @@ background-color: #fff;
 } 
 
 .worker-photo {
-margin-bottom: 32px;
+margin-bottom: 0;
 }
 
 .name-team {
@@ -96,7 +96,8 @@ padding-top: 32px;
 }
 
 @media screen and (min-width: 768px) {
-.container {
+
+.team-div-container {
 width: 584px;
 }
 
@@ -110,6 +111,10 @@ gap: 64px 24px;
 
 .team-list {
 width: calc((100% - 24px) / 2);
+}
+
+.advantages {
+text-align: left;
 }
 
 }
